# telespot

./: .gitignore  README.md  pyproject.toml
telespot/: db.sqlite3  manage.py
telespot/diagram/: add_db_data.py  models.py  urls.py  views.py
telespot/diagram/migrations/: 0001_initial.py  0002_alter_yearlyfact_fact_value_and_more.py
telespot/diagram/static/css/: styles.css
telespot/diagram/templates/: diagram_page.html
telespot/telespot/: asgi.py  settings.py  urls.py  wsgi.py
